fixed the gallery bubble overflow

--- a/css/main.css
+++ b/css/main.css
@@ -86,6 +86,7 @@ body {
   margin-bottom: 40px;
   background-color: #677077;
   border-radius: 15px;
+  overflow: hidden;
 }
 
 .bubbles h1 {
